# QtQmlSubdirExample

./: CMakeLists.txt  Main.qml  README.md  main.cpp
utils/: CMakeLists.txt  Theme.qml
